[package]
name = "common-libs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["full"] }
async-compat = "0.2.1"
eyre = { version = "0.6.8" }
minimal-executor = "0.4.1"
tracing = "0.1.37"
color-eyre = "0.6.2"
thiserror = "1.0.37"
clap = { version = "4.0.26", features = ["derive", "env"] }
serde = { version = "1.0.147", features = ["derive"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-error = "0.2.0"
tracing-appender = "0.2.2"
tracing-futures = "0.2.5"
tracing-log = "0.1.3"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
async-trait = "0.1.58"
serde_json = "1.0.87"
serde_yaml = "0.9.14"
cfg-if = "1.0.0"
itertools = "0.11.0"
tap = "1.0.1"
bytes = "1.2.1"
strum = "0.25.0"
strum_macros = "0.25.2"
chrono = "0.4.23"
static_assertions = "1.1.0"
lazy_static = "1.4.0"
derivative = "2.2.0"
