[package]
name = "common"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = { version = "0.6.8" }
tracing = "0.1.37"
color-eyre = "0.6.2"
clap = { version = "4.0.26", features = ["derive", "env"] }
serde = { version = "1.0.147", features = ["derive"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "registry", "std", "tracing-log"] }
console-subscriber = "0.2.0"
tracing-error = "0.2.0"
tracing-appender = "0.2.2"
tracing-futures = "0.2.5"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
serde_json = "1.0.87"
dotenvy = "0.15.7"
